--- a/public/base/plupload/jquery.ui.plupload/css/jquery.ui.plupload.css
+++ b/public/base/plupload/jquery.ui.plupload/css/jquery.ui.plupload.css
@@ -14,7 +14,7 @@
 .plupload_wrapper {
 	font: normal 11px Verdana,sans-serif;
 	width: 100%;
-	min-width: 460px;
+	min-width: 520px;
 	line-height: 12px;
 }
 
@@ -28,15 +28,15 @@
 .plupload_file {border-width: 0 0 1px 0}
 .plupload_container .plupload_header {border-width: 0 0 1px 0; position: relative;}
 
-.plupload_delete .ui-icon, 
+.plupload_delete .ui-icon,
 .plupload_done .ui-icon,
 .plupload_failed .ui-icon {
-	cursor:pointer;	
+	cursor:pointer;
 }
 
 .plupload_header_content {
 	height: 56px;
-	padding: 0 130px 0 60px;
+	padding: 0 160px 0 60px;
 	position: relative;
 }
 
@@ -100,7 +100,6 @@
 .plupload_filelist_content {
 	padding: 0;
 	margin: 0;
-	background: #fff;
 }
 
 .plupload_cell {padding: 8px 6px;}
@@ -145,7 +144,7 @@
 	right: 0;
 }
 
-.plupload_buttons { 
+.plupload_buttons {
 	position: relative;
 }
 
@@ -161,7 +160,7 @@
 	_clear: left;
 }
 
-.plupload_view_list div.plupload_file_size, 
+.plupload_view_list div.plupload_file_size,
 .plupload_view_list div.plupload_file_status,
 .plupload_view_list div.plupload_file_action {
 	padding: 8px 6px;
@@ -188,11 +187,11 @@
 	margin-left: -2px;
 }
 
-.plupload_view_list .plupload_file_size, 
+.plupload_view_list .plupload_file_size,
 .plupload_view_list .plupload_file_status,
-.plupload_filelist_footer .plupload_file_size, 
+.plupload_filelist_footer .plupload_file_size,
 .plupload_filelist_footer .plupload_file_status {
-	text-align: right; 
+	text-align: right;
 	width: 52px;
 }
 
@@ -263,7 +262,7 @@
 }
 
 .plupload_view_thumbs div.plupload_file_status {
-	position: relative;	
+	position: relative;
 	height: 3px;
 	overflow: hidden;
 	text-indent: -999px;
@@ -277,7 +276,7 @@
 
 .plupload .ui-sortable-helper,
 .plupload .ui-sortable .plupload_file {
-	cursor:move;	
+	cursor:move;
 }
 
 .plupload_file_action {width: 16px;}
@@ -331,12 +330,16 @@
 	display: block;
 }
 
+.plupload_files_queued .plupload_droptext {
+	display: none;
+}
+
 .plupload_buttons, .plupload_upload_status {float: left}
 
 .plupload_message {
 	position: absolute;
 	top: -1px;
-	left: -1px;	
+	left: -1px;
 	height: 100%;
 	width: 100%;
 }
@@ -347,34 +350,30 @@
 }
 
 .plupload_message strong {
-	font-weight: bold;	
+	font-weight: bold;
 }
 
 .plupload_message i {
-	font-style: italic;	
+	font-style: italic;
 }
 
 .plupload_message p span.ui-icon {
 	float: left;
-	margin-right: 0.3em;	
+	margin-right: 0.3em;
 }
 
 .plupload_header_content .ui-state-error,
 .plupload_header_content .ui-state-highlight {
-	border:none;	
+	border:none;
 }
 
 .plupload_message_close {
 	position:absolute;
 	top:5px;
 	right:5px;
-	cursor:pointer;	
+	cursor:pointer;
 }
 
 .plupload .ui-sortable-placeholder {
 	height:35px;
-}
-
-.plupload_wrapper .ui-widget-content,.plupload_wrapper .ui-widget-header{
-	border-color: #ddd;
 }
