--- a/templates/default/css/user.css
+++ b/templates/default/css/user.css
@@ -6,6 +6,10 @@ ul,li{margin:0;padding:0;list-style: none;}
 ::selection{background-color:#38485a;color:#fff;text-shadow:0 1px 0 rgba(0,0,0,0.3)}
 *::-moz-selection {background-color: #38485A;color: #FFFFFF;text-shadow: 0 1px 0 rgba(0, 0, 0, 0.3);}
 form,p{margin:0;padding:0;}
+a{ 
+outline: none;
+blr:expression(this.onFocus=this.blur());
+}
 /*引用样式*/
 blockquote {
     border-color: #CCCCCC;
@@ -1116,7 +1120,7 @@ div.viewphoto{
     margin: 0;
 }
 .banner-user-info .desc{
-    color:#bbb;
+    color:#ddd;
 }
 .banner-act{
     float: right;
@@ -1182,4 +1186,92 @@ div.viewphoto{
     font-weight: 500;
     letter-spacing: 10px;
     text-indent: 10px;
+}
+
+li.user-row {
+    width: 280px;
+    margin: 0 10px 20px; 
+    position: relative;
+    width: 280px;
+    display: inline-block;
+    background-color: #fff;
+    transition: all .2s;
+}
+li.user-row:hover{
+    -webkit-box-shadow:0 1px 15px rgba(0,0,0,.08);
+    box-shadow:0 1px 15px rgba(0,0,0,.08)
+}
+li.user-row .top{
+    position: relative;
+    width: 100%;
+    height: 130px;
+    background-size: cover;
+    background-position: center;
+    background-color: #b9c1c7;
+    border-radius: 3px 3px 0 0;
+    transition: all .2s;
+    border: 1px solid #eeeff2;
+    border-bottom: none;
+}
+li.user-row .avatar {
+    border: 2px solid #fff;
+    border-radius: 50%;
+    background-position: center;
+    background-size: cover;
+    z-index: 99;
+    width: 60px;
+    height: 60px;
+    position: absolute;
+    bottom: -30px;
+    left: 50%;
+    margin-left: -30px;
+}
+li.user-row .bottom {
+    width: 100%;
+    height: 120px;
+    text-align: center;
+    padding-top: 35px;
+    border: 1px solid #eeeff2;
+    border-top: none;
+    border-radius: 0 0 3px 3px;
+}
+li.user-row span{
+    line-height: 1.5;
+    color: #b9c1c7;
+    font-size: 14px;
+    margin: 0 auto 15px;
+    display: block;
+}
+li.user-row .name {
+    color: #525558;
+    font-size: 24px;
+    max-width: calc(100% - 20px);
+    display: inline-block;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    margin-bottom: 0;
+}
+li.user-row  div.follow-button .button{
+    display: inline-block;
+    color: #fff;
+    background: #5fb336;
+    border: 1px solid #5fb336;
+    padding: 2px 8px;
+    border-radius: 2px;
+    cursor: pointer;
+    position: relative;
+    z-index: 150
+}
+li.user-row  div.follow-button .followed{
+    background: #aaa;
+    border-color: #aaa;
+}
+li.user-row .link_wrap {
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    z-index: 100;
 }
