--- a/templates/default/css/user.css
+++ b/templates/default/css/user.css
@@ -223,7 +223,6 @@ div.pages a.on{
 }
 .secondary-nav {
     width: 100%;
-    height: 28px;
     padding: 16px 0;
     background-color: #fff;
     -webkit-box-shadow: 0 2px 8px 0 rgba(133,136,138,.1);
@@ -252,7 +251,47 @@ div.pages a.on{
     color: #222;
     text-decoration: none;
 }
-
+.tag-header {
+    position: relative;
+    padding: 16px 0;
+    font-size: 0;
+    background-color: #fff;
+}
+.tag-header .tag-name {
+    position: relative;
+    z-index: 1;
+    display: inline-block;
+    margin: 0 0 0 40px;
+    min-width: 84px;
+    letter-spacing: 20px;
+    font-size: 32px;
+    line-height: 38px;
+    font-weight: 500;
+    color: #222;
+}
+.tag-header .tag-name::before {
+    content: '|||||||||||||||||||||||||||||||||||||||||';
+    position: absolute;
+    bottom: 0;
+    left: 12px;
+    z-index: -1;
+    width: 84px;
+    color: #5fb336;
+    overflow: hidden;
+    font-weight: lighter;
+    font-size: 12px;
+    line-height: 14px;
+    letter-spacing: 0;
+}
+.tag-header .tag-posts {
+    margin-left: 30px;
+    font-size: 14px;
+    font-weight: 400;
+    letter-spacing: 5px;
+    line-height: 14px;
+    color: #c99a05;
+    vertical-align: bottom;
+}
 .content {
     position: relative;
     margin: 0 auto;
