--- a/templates/default/css/user.css
+++ b/templates/default/css/user.css
@@ -2,7 +2,7 @@ body{margin:0;font-size: 14px;font-family: "Hiragino Sans GB","Helvetica Neue","
 img{border:none;}
 button, html input[type="button"], input[type="reset"], input[type="submit"] {cursor: pointer;}
 input[type="text"],input[type="email"],input[type="password"],textarea{outline: none;}
-ul,li{margin:0;padding:0;list-style: none;}
+ul,li,dl,dd,dt{margin:0;padding:0;list-style: none;}
 ::selection{background-color:#38485a;color:#fff;text-shadow:0 1px 0 rgba(0,0,0,0.3)}
 *::-moz-selection {background-color: #38485A;color: #FFFFFF;text-shadow: 0 1px 0 rgba(0, 0, 0, 0.3);}
 form,p{margin:0;padding:0;}
@@ -129,7 +129,7 @@ div.pages a.on{
     color: #fff;
     font-weight: 500;
 }
-.head-nav ul li.active a{
+.head-nav ul li.active > a{
     color: #5fb336;
 }
 .head-nav ul li a:hover{
@@ -179,7 +179,24 @@ div.pages a.on{
 .head-user ul.main-list  ul.sub-list{
     display: none;
 }
-
+.head-nav ul.main-list li.sub-list-trigger{
+    position: relative;
+    z-index: 1000;
+}
+.head-nav ul.main-list li.sub-list-trigger ul.sub-list{
+    display: none;
+    width: 200px;
+    background-color: #222;
+}
+.head-nav ul.main-list li.sub-list-trigger ul.sub-list li{
+    float: none;
+    display: inline-block;
+}
+.head-nav ul.main-list li.sub-list-trigger ul.sub-list li a{
+    float: none;
+    display: inline-block;
+    line-height: 40px;
+}
 #footer{
     background: #222222;
     margin:40px auto 0;
@@ -251,13 +268,13 @@ div.pages a.on{
     color: #222;
     text-decoration: none;
 }
-.tag-header {
+.caption-header {
     position: relative;
     padding: 16px 0;
     font-size: 0;
     background-color: #fff;
 }
-.tag-header .tag-name {
+.caption-header .caption-name {
     position: relative;
     z-index: 1;
     display: inline-block;
@@ -269,7 +286,7 @@ div.pages a.on{
     font-weight: 500;
     color: #222;
 }
-.tag-header .tag-name::before {
+.caption-header .caption-name::before {
     content: '|||||||||||||||||||||||||||||||||||||||||';
     position: absolute;
     bottom: 0;
@@ -283,7 +300,7 @@ div.pages a.on{
     line-height: 14px;
     letter-spacing: 0;
 }
-.tag-header .tag-posts {
+.caption-header .caption-posts {
     margin-left: 30px;
     font-size: 14px;
     font-weight: 400;
@@ -292,7 +309,7 @@ div.pages a.on{
     color: #c99a05;
     vertical-align: bottom;
 }
-.content {
+.container .content {
     position: relative;
     margin: 0 auto;
     margin-top: 40px;
@@ -300,16 +317,15 @@ div.pages a.on{
     width: 940px;
     background-color: #fff;
 }
-
-.content a{
+.container .content a{
     color:#5fb336;
 }
-.content .avatar-wrap {
+.container .content .avatar-wrap {
     position: absolute;
     right: 40px;
     top: 105px;
 }
-.content .avatar-wrap .avatar {
+.container .content .avatar-wrap .avatar {
     border-radius: 100%;
     width: 110px;
     height: 110px;
@@ -320,7 +336,7 @@ div.pages a.on{
     color:#fff;
     text-shadow:0 1px 2px #c4b59d;
 }
-.content .avatar-wrap .change-btn {
+.container .content .avatar-wrap .change-btn {
     cursor: pointer;
     display: block;
     position: relative;
@@ -333,12 +349,12 @@ div.pages a.on{
     color: #5fb336;
     text-align: center;
 }
-.content .avatar-wrap .change-btn input {
+.container .content .avatar-wrap .change-btn input {
     opacity: 0;
     position: absolute;
     top: -999px;
 }
-.content .smallbtn{
+.container .content .smallbtn{
     border:1px solid #5fb336;
     color:#5fb336;
     border-radius:4px;
@@ -604,6 +620,7 @@ div.pages a.on{
 }
 .content-album .photo_thumbnail {
     position: relative;
+    z-index: 3;
     width: 360px;
     margin: 0 25px 50px 25px;
     display: inline-block;
@@ -665,6 +682,24 @@ div.pages a.on{
     overflow: hidden;
     width: 95%;
     text-overflow: ellipsis;
+}
+.content-album .normal_list .bottom{
+    height: 110px;
+}
+.content-album .normal_list .bottom .credits .avatar {
+    display: inline-block;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    background-size: cover;
+    vertical-align: middle;
+    margin-right: 10px;
+}
+.content-album .normal_list .bottom .credits .author-wrap {
+    display: inline-block;
+    font-size: 14px;
+    overflow: hidden;
+    vertical-align: middle;
 }
 
 .gallery_private_icon {
@@ -1235,6 +1270,7 @@ li.user-row {
     display: inline-block;
     background-color: #fff;
     transition: all .2s;
+    z-index: 3;
 }
 li.user-row:hover{
     -webkit-box-shadow:0 1px 15px rgba(0,0,0,.08);
@@ -1313,4 +1349,76 @@ li.user-row .link_wrap {
     top: 0;
     bottom: 0;
     z-index: 100;
+}
+
+
+.detail-header {
+    width: 100%;
+    height: 420px;
+    overflow: hidden;
+    position: relative;
+    color: #fff;
+    text-align: center;
+}
+.detail-header-img{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 110%;
+    height: 110%;
+    transform: translate(-50%,-50%);
+}
+.detail-header-imgbg{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    filter: blur(10px);
+}
+.detail-header-imgpop {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,.2);
+}
+.detail-header .text-item{
+    width: 990px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+}
+.detail-header .text-item dt {
+    height: 38px;
+    line-height: 38px;
+    padding-bottom: 27px;
+}
+.detail-header .text-item dt .title {
+    display: inline-block;
+    vertical-align: middle;
+    font-size: 38px;
+    letter-spacing: .8px;
+}
+.detail-header .text-item dd a{
+    color: #fff;
+}
+.detail-header .text-item dd img{
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    background-size: cover;
+    vertical-align: middle;
+}
+
+.detail-header .total-info{
+    position: absolute;
+    right: 40px;
+    bottom: 40px;
+    font-size: 14px;
 }
