--- a/templates/default/css/user.css
+++ b/templates/default/css/user.css
@@ -1170,6 +1170,7 @@ div.viewphoto{
     font-weight: 500;
 }
 .banner-user-info a{
+    display: inline-block;
     font-size: 14px;
     color: #fff;
 }
