调整个人空间的页面和结构

--- a/templates/default/css/user.css
+++ b/templates/default/css/user.css
@@ -1423,3 +1423,12 @@ li.user-row .link_wrap {
     bottom: 40px;
     font-size: 14px;
 }
+.detail-header .back-link{
+    position: absolute;
+    left: 40px;
+    bottom: 40px;
+    font-size: 14px;
+}
+.detail-header .back-link a{
+    color:#fff;
+}
