增加两条路由 后台样式有点问题

--- a/public/base/admin/css/admin.css
+++ b/public/base/admin/css/admin.css
@@ -113,7 +113,7 @@ div.pages a.on{
     float:left;
     display: block;
     font-size: 16px;
-    font-weight: lighter;
+    font-weight: normal;
     height:56px;
     line-height: 56px;
     padding:0 20px;
